# elasticsearch-hub-mcp

./: .gitignore  README.md  config.example.json  docs.md  install.sh  pyproject.toml
src/elasticsearch_hub_mcp/: __main__.py  config.py  connection_manager.py  docs.py  memory.py  server.py  tools.py
tests/: conftest.py  test_config.py  test_memory.py  test_tools.py
