[project]
name = "elasticsearch-hub-mcp"
version = "0.1.0"
description = "FastMCP server for managing multiple Elasticsearch instances with per-instance memory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0",
    "elasticsearch[async]>=8.0",
    "pydantic>=2.0",
]

[project.scripts]
elasticsearch-hub-mcp = "elasticsearch_hub_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elasticsearch_hub_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
